# openrct2-codegen

./: .gitignore  README.md  probe_enum_errors.py  probe_enum_errors2.py  pyproject.toml  stress_test_enums.py
openrct2_actiongen/: cli.py  codegen.py  ir.py  parser.py  source.py  state_ir.py  state_parser.py
openrct2_actiongen/templates/: actions.py.j2  actions.ts.j2
openrct2_codegen/: cli.py  source.py
openrct2_codegen/actions/: codegen.py  ir.py  parser.py
openrct2_codegen/actions/templates/: actions.py.j2
openrct2_codegen/enums/: codegen.py  ir.py  parser.py
openrct2_codegen/enums/templates/: enums.py.j2
openrct2_codegen/objects/: codegen.py  ir.py  parser.py
openrct2_codegen/objects/templates/: objects.py.j2  track-groups.ts.j2
openrct2_codegen/state/: codegen.py  ir.py  parser.py
openrct2_codegen/state/templates/: queries.ts.j2  state.py.j2  state.ts.j2
scripts/: lint.sh
