[project]
name = "openrct2-codegen"
version = "0.4.0"
description = "Parse OpenRCT2 C++ source to generate action and state binding definitions"
readme = "README.md"
authors = [
    { name = "Mauk Muller", email = "mauk@elnino.tech" }
]
requires-python = ">=3.13"
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-cpp>=0.23",
    "click>=8.1",
    "pydantic>=2.10",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
openrct2-codegen = "openrct2_codegen.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
